EZ-1458 core continue returning student_visible: boolean from services, wui convert times to browser time instead of est

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -1238,9 +1238,8 @@ paths:
                       type: string
                     grade_threshold:
                       type: integer
-                    student_visible_from:
-                      type: string
-                      format: date-time
+                    student_visible:
+                      type: boolean
                     grades:
                       type: array
                       items:
@@ -1296,6 +1295,8 @@ paths:
               last_modified:
                 type: string
                 format: date-time
+              student_visible:
+                type: boolean
               student_visible_from:
                 type: string
                 format: date-time
@@ -1344,6 +1345,7 @@ paths:
               - grader_type
               - threshold
               - last_modified
+              - student_visible
               - assessments_student_visible
 
 
