EZ-1481, EZ-1123 return new attrs related to anon autograde in exercise details service, update anon submission statistics, update database, read number of anon submissions to keep from cong

--- a/core/src/main/resources/application.yaml.sample
+++ b/core/src/main/resources/application.yaml.sample
@@ -35,6 +35,7 @@ easy:
           ms: "3000"
         fixed-delay-observer-clear:
           ms: "3000"
+        anonymous-submissions-to-keep: "50"
     statistics:
       fixed-delay:
         ms: "1000"
