--- a/tsl/src/main/kotlin/com/example/demo/test_tsl.YAML
+++ b/tsl/src/main/kotlin/com/example/demo/test_tsl.YAML
@@ -1,9 +1,11 @@
 # Example TSL file.
 
 language: python3
-validateFiles: false
+validateFiles: true
 requiredFiles:
   - kodu1.py
+  - kodu2.py
+  - kodu3.py
 tslVersion: 1.0.0
 
 tests:
