--- a/wui/src/main/kotlin/AppProperties.kt.sample
+++ b/wui/src/main/kotlin/AppProperties.kt.sample
@@ -2,6 +2,7 @@
 object AppProperties {
     const val AppName = "Lahendus"
 
+    const val WUI_ROOT = "https://dev.lahendus.ut.ee"
     const val EMS_ROOT = "https://dev.ems.lahendus.ut.ee/v2"
 
     const val KEYCLOAK_CONF_URL = "https://dev.lahendus.ut.ee/static/keycloak.json"
