Bug fixes. Update Tiivad version to 0.0.10.

--- a/tsl/src/main/kotlin/com/example/demo/test_tsl.YAML
+++ b/tsl/src/main/kotlin/com/example/demo/test_tsl.YAML
@@ -216,14 +216,14 @@ tests:
   - type: function_execution_test
     functionName: seosta_lapsed_ja_vanemad
     arguments:
-      - lapsed.txt
-      - nimed.txt
+      - '"lapsed.txt"'
+      - '"nimed.txt"'
     standardInputData:
       - Kasutajasisend
     inputFiles:
       - fileName: sisendfail.txt
         fileContent: Sisendfaili sisu.
-    returnValue: '3'
+    returnValue: 3
     genericChecks:
       - checkType: ANY_OF_THESE
         considerElementsOrder: false
