EZ-1044 use correct path for liquibase changeset, teardown (dropAll) after tests, remove performance test with embedded db.

--- a/core/src/test/resources/application.yaml.sample
+++ b/core/src/test/resources/application.yaml.sample
@@ -28,6 +28,8 @@ spring:
 
 easy:
   core:
+    liquibase:
+        changelog: "<path-to-changelog.xml>"
     auth-enabled: true
     mail:
       from: "<from-address>"
