EZ-1044 drop embedded postgres, fix liquibase locking issue, refactor tests, optimise tests by setting up db once before tests and tearing down after all tests.

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -85,8 +85,7 @@ dependencies {
     // Testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    testImplementation 'io.zonky.test:embedded-postgres:2.0.3'
-    testImplementation("org.liquibase:liquibase-core:3.7.0")
+    testImplementation 'org.liquibase:liquibase-core:3.7.0'
 
     // Asciidoc
     implementation 'org.asciidoctor:asciidoctorj:2.4.3'
