--- a/core/build.gradle
+++ b/core/build.gradle
@@ -73,6 +73,8 @@ dependencies {
     liquibaseRuntime 'org.liquibase:liquibase-core:3.6.3'
     liquibaseRuntime 'org.postgresql:postgresql:42.2.14'
 
+    // For requests that contain date-time (e.g course invite link generation)
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-joda"
     // Kotlin support
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
